infra and visualizer servers start and turns increment, but ending server and tests don't work yet